plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'jacoco'
    id 'org.sonarqube' version '7.3.0.8198'
}

group = 'gov.cdc.etldatapipeline'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    maven {
        url = "https://packages.confluent.io/maven"
    }
}

test {
    useJUnitPlatform {
      excludeTags 'Functional'
      excludeTags 'Unit'
    }
    finalizedBy jacocoTestReport
}

tasks.register("test-functional", Test) {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    useJUnitPlatform {
        includeTags "Functional"
    }
    finalizedBy jacocoTestReport
}

tasks.register("test-unit", Test) {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    useJUnitPlatform {
        includeTags "Unit"
    }
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.11"
    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

bootRun {
    systemProperty 'spring.profiles.active', 'default,development,local'

    debugOptions {
        enabled = true
        server = true
        suspend = false
        port = 17071
    }
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it,
                    exclude: ['**/*_$$_javassist_*', '**/LogDynamic*.class', '**/*Application.class' ])
        }))
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Kafka & Debezium
    implementation 'org.springframework.kafka:spring-kafka:3.3.1'
    implementation 'org.apache.kafka:kafka-clients:3.9.2'
    implementation 'org.apache.kafka:connect-api:3.9.1'
    implementation 'io.debezium:debezium-core:2.4.1.Final'

    // Persistence & Database
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:13.4.0.jre11'

    // Logging
    compileOnly 'org.slf4j:slf4j-api'
    implementation 'ch.qos.logback:logback-classic:1.5.32'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // Metrics & Monitoring
    implementation 'io.micrometer:micrometer-core'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Serialization & Mapping
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
    implementation 'org.modelmapper:modelmapper:3.2.0'

    // Utilities
    implementation 'com.google.guava:guava:33.6.0-jre'
    implementation 'commons-io:commons-io:2.21.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc'
    testImplementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
    testImplementation 'org.liquibase:liquibase-core:4.27.0'
    testImplementation 'org.testcontainers:testcontainers:2.0.5'
    testImplementation 'org.testcontainers:testcontainers-kafka:2.0.5'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
    testImplementation 'org.awaitility:awaitility:4.3.0'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
    dependencies {
        dependency 'org.apache.tomcat.embed:tomcat-embed-core:11.0.11'
        dependency 'org.apache.tomcat.embed:tomcat-embed-el:11.0.11'
        dependency 'org.apache.tomcat.embed:tomcat-embed-websocket:11.0.11'
        dependency 'com.fasterxml.jackson.core:jackson-core:2.21.1'
    }
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "CDCgov_NEDSS-DataReporting"
        property "sonar.organization", "cdcgov"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
